WIP: Refactoring to establish Tourist Experiences